<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fon">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/main_welcome"
        android:textAlignment="center"
        android:textColor="@color/nav_bar_tint"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_g"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:background="@mipmap/logo_back"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:srcCompat="@mipmap/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/fon2"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/main_question"
            app:layout_constraintBottom_toTopOf="@+id/wyn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wyn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_wyn"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/main_enter_name"
            android:inputType="textCapWords"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:background="@mipmap/answer1"
        android:onClick="goNextPage"
        android:text="@string/next"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/read_pp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/read_pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:onClick="showPrivacyPolicy"
        android:text="@string/txt_credits"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/read_pp"
        app:layout_constraintEnd_toStartOf="@+id/read_pp"
        app:layout_constraintTop_toBottomOf="@+id/next" />

</androidx.constraintlayout.widget.ConstraintLayout>